--- a/style.css
+++ b/style.css
@@ -300,6 +300,76 @@ footer .container{
 	max-height: auto;
 }
 
+#getAccessBody{
+	height: 100vh;
+	background-image: url("img/banner.jpg");
+	background-size: cover;
+	background-position: center;
+}
+
+#getAccess{
+	width: 30vw;
+	padding: 80px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	background: rgba(255, 255, 255, 0.35);
+	/* border-radius: 16px; */
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(6.5px);
+	-webkit-backdrop-filter: blur(6.5px);
+	border: 1px solid rgba(255, 255, 255, 0.36);
+	
+}
+
+#getAccess input{
+	margin-top: 20px;
+	height: 56px;
+}
+
+
+input[type=checkbox]{
+	-webkit-appearance: none;
+	width: 18px;
+	margin-top: 20px;
+}
+
+[type="checkbox"]::before {
+	border-radius: 0px;
+	border: 2px solid #fff;
+	background-color: #eee;
+	display: block;
+	content: "";
+	width: 18px;
+	height: 18px;
+	margin-top: 18px;
+}
+
+/** Angang Loading Animation **/
+#loadingAnimation{display: none;}
+
+.wrapper{transform: scale(.5);width: 200%;margin-left: -50%;}
+
+.checkmark__circle{stroke-dasharray: 166;stroke-dashoffset: 166;stroke-width: 2;stroke-miterlimit: 10;stroke: #7ac142;fill: none;animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards}
+
+.checkmark{width: 56px;height: 56px;border-radius: 50%;display: block;stroke-width: 2;stroke: #fff;stroke-miterlimit: 10;box-shadow: inset 0px 0px 0px #7ac142;animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both}
+
+.checkmark__check{transform-origin: 50% 50%;stroke-dasharray: 48;stroke-dashoffset: 48;animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards}
+
+@keyframes stroke{100%{stroke-dashoffset: 0}}@keyframes scale{0%, 100%{transform: none}50%{transform: scale3d(1.1, 1.1, 1)}}@keyframes fill{100%{box-shadow: inset 0px 0px 0px 30px #7ac142}}
+/** Ende Loading Animation **/
+
+input[type=checkbox]:checked{ 
+	display: none;
+}
+
+input[type=checkbox]:checked ~ #loadingAnimation{
+    display: inline-block;
+	margin-top: 20px;
+}
+
 
 @media screen and (max-width:992px) {
 /* Zusätzliche Regeln für kleinere Monitore  */
@@ -344,6 +414,8 @@ footer .container{
 	.wissenBildContainer{display: block; width: 100%;}
 	
 	.wissenArtikel p{width: 100%; padding-top: 20px; height: auto; overflow: hidden;}
+	
+	#getAccess{width: calc(100% - 40px);}
 }
 
 @media screen and (max-width:410px) {
